完善风力底座的交互